Updating app style to use only the black color

--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,20 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  text-align: center;
+}
+
+#root {
+  margin-bottom: 25px;
+}
+
+.ui.list .list > .item a.header,
+.ui.list > .item a.header {
+  cursor: pointer;
+  color: black !important;
+}
+
+.ui.list .list > .item a.header:hover,
+.ui.list > .item a.header:hover {
+  color: black !important;
 }
