--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,16 @@ a:hover {
   color: #292d35;
   text-decoration: none;
 }
+
+button {
+  font-family: 'PT Sans', sans-serif !important;
+}
+
+.button {
+  border-radius: 0 !important;
+}
+
+.ui.segment {
+  border-radius: 0 !important;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
